Document historic bugs.

--- a/TODO
+++ b/TODO
@@ -12,8 +12,7 @@
   - limit DB locks / unique tx
   - disallow greedy names
   - enforce nametx-version also for name *outputs*
-  - what about 774d4c446cecfc40b1c02fdc5a13be6d2007233f9d91daefab6b3c2e70042f05?
-    could this still happen?  why is it accepted in the code at all?
+  - update fee logic?
 
 * upgrade to new version at fixed height:
   - blocks version=2 via majority rule soft fork (BIP34)
