Enable testnet configuration.

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 * test multisig/P2SH with names
 
-* fix testnet and other not-yet-updated configurations / FIXMEs
+* fix not-yet-updated configurations (FIXMEs in chainparams.cpp)
 
 * test CBlockVersion for being a standard-layout class
 
