Limit blocks by BDB locks required.
This is a temporary measure to make the rebased client "compatible" with
the old BDB-based one.

Based on
https://github.com/bitcoin/bitcoin/commit/8c222dca4f961ad13ec64d690134a40d09b20813.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 * soft fork in namecoind:
+  + prevent "name_new stealing" in memory pool
+  + enforce nametx-version also for name *outputs*
   - limit DB locks / unique tx
   - disallow greedy names
-  - enforce nametx-version also for name *outputs*
   - disallow auxpow parent blocks with auxpow
   - update fee logic?
 
