Increase default relay fee to 0.001 NMC.
This matches (roughly) the value of the old client.

--- a/TODO
+++ b/TODO
@@ -3,8 +3,8 @@
   + enforce nametx-version also for name *outputs*
   + disallow auxpow parent blocks with auxpow
   + limit DB locks / unique tx
+  + harmonise fees
   - disallow greedy names
-  - update fee logic?
 
 * handle seed nodes / DNS seeds
 
