Enable strict tx version checks at softfork height 212,500.
Re-enable the strict checks for NAME_NEW's without Namecoin tx version
at the softfork at 212,500.  This makes it consistent with the behaviour
of the old client that has been implemented now.

--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
 * soft fork in namecoind:
-  + prevent "name_new stealing" in memory pool
-  + enforce nametx-version also for name *outputs*
-  + disallow auxpow parent blocks with auxpow
-  + limit DB locks / unique tx
-  + harmonise fees
+  - nametx version softfork
   - disallow greedy names
+
+* after softfork height:
+  - fully disallow wrong-version tx (make "historic bugs")
+  - get rid of "LenientVersionCheck" entirely
+  - make also greedy names "historic bugs"?
 
 * handle seed nodes / DNS seeds
 
